# fidanka

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  code_of_conduct.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  version.sh
.github/: pull_request_template.md
.github/workflows/: python-build.yml  python-package.yml
assets/: fidankaLogo.xcf  githubSocialLogo.xcf
docs/: .buildinfo  Makefile  fidanka.bolometric.ext_data.html  fidanka.bolometric.html  fidanka.exception.html  fidanka.ext.html  fidanka.ext.src.html  fidanka.fiducial.html  fidanka.fiducial.methods.html  fidanka.html  fidanka.isochrone.html  fidanka.isofit.html  fidanka.misc.html  fidanka.warn.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: fidanka.bolometric.rst.txt  fidanka.exception.rst.txt  fidanka.ext.rst.txt  fidanka.ext.src.rst.txt  fidanka.isofit.rst.txt
docs/source/: conf.py  fidanka.fiducial.rst  fidanka.isofit.rst  fidanka.misc.rst  fidanka.rst  fidanka.warn.rst  index.rst
docs_src/: Makefile
docs_src/source/: conf.py  fidanka.bolometric.ext_data.rst  fidanka.bolometric.rst  fidanka.fiducial.methods.rst  fidanka.isochrone.rst  fidanka.isofit.rst  fidanka.misc.rst  index.rst  modules.rst
src/fidanka/: __init__.py
src/fidanka/bolometric/: URLS.py  __init__.py  bctab.py  color.py  load.py
src/fidanka/bolometric/ext_data/: checksums
src/fidanka/exception/: exception.py
src/fidanka/ext/src/: nearest_neighbors.c
src/fidanka/fiducial/: __init__.py  fiducial.py  fiducial.py.orig  fiducialLine.py  utils.py
src/fidanka/fiducial/methods/: __init__.py  mc.py
src/fidanka/isochrone/: MIST.py  isochrone.py
src/fidanka/isofit/: __init__.py  fit.py  fitSingle.py  models.py
src/fidanka/misc/: logging.py  parallel.py  utils.py
src/fidanka/modeling/: noise.py  popSynthModel.py
src/fidanka/population/: ager.py  artificialStar.py  synthesize.py  utils.py
src/fidanka/warn/: warnings.py
tests/fidanka/: .coverage  README.md  makefile  runTest.sh  runTests.sh
tests/fidanka/fiducial/: .coverage  makefile
tests/fidanka/fiducial/fiducial/: .coverage  test_fiducial.py
tests/fidanka/fiducial/fiducialLine/: test_fiducialLine.py
tests/fidanka/fiducial/utils/: .coverage  makefile  target.npz  target.pkl  test_utils.py
tests/fidanka/fiducial/utils/input/: inputData-clean_bins.txt
tests/fidanka/input/: README.md  photometry.csv
