[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "scikit-build", "cmake", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name="fidanka"
authors = [
	{name = "Thomas M. Boudreaux", email="thomas@boudreauxmail.com"},
	{name = "Martin Ying", email="martin.ying.gr@dartmouth.edu"},
	]
description="Fiducual line generation and isochone fitting"
readme="README.md"
requires-python = ">=3.8"
keywords=["Globular Cluster"]
license = { file = "LICENSE" }
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	]
dependencies = [
	"matplotlib",
	"numpy",
	"scipy",
	"tqdm",
	"pandas",
	"pybind11",
	"emcee",
  "pyTensor",
  "pymc",
  "scikit-learn"
	]
version = {attr = "__version__.__version__"}

[project.urls]
Homepage = "https://github.com/tboudreaux/fidanka"

[tool.black]
line-length = 88  # Specify the line length
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']  # Specify your Python version
include = '\.pyi?$'
exclude = '''  # Specify the files/dirs that should be ignored by the black formatter
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
version_files = [
    "pyproject.toml:version",
    "__version__.py"
]
