[metadata]
name = "fidanka"

[options]
package_dir=
	=src
packages = find:
include_package_data = True

[options.packages.find]
where=src

[options.package_data]
* = checksums

[flake8]
exclude = tests,docs,docs_src,assets,build,dist
per-file-ignores = synthesize.py:F82
select = E9,F63,F7,F82
count = true
statistics = true
show-source = true
